# lab-5-7-fafo

src/: CMakeLists.txt  Document.hpp  DocumentBuilder.cpp  DocumentBuilder.hpp  InvertedIndex.hpp
src/index_core/: CMakeLists.txt  Document.hpp  DocumentBuilder.cpp  IndexStore.cpp  IndexStore.hpp  InvertedIndex.cpp  InvertedIndex.hpp  Result.hpp  UpdateTransaction.cpp  UpdateTransaction.hpp
tests/: tests.cpp
